Updates for basic discovery scan tests in alpha (#832)