@@ -1,20 +1,34 @@
 package com.google.daq.mqtt.sequencer.sequences;
 
+import static com.google.common.collect.Sets.symmetricDifference;
 import static com.google.daq.mqtt.util.TimePeriodConstants.NINETY_SECONDS_MS;
+import static com.google.daq.mqtt.util.TimePeriodConstants.ONE_MINUTE_MS;
 import static com.google.daq.mqtt.util.TimePeriodConstants.TWO_MINUTES_MS;
+import static com.google.udmi.util.CleanDateFormat.cleanDate;
+import static com.google.udmi.util.CleanDateFormat.cleanInstantDate;
+import static com.google.udmi.util.CleanDateFormat.dateEquals;
 import static com.google.udmi.util.GeneralUtils.CSV_JOINER;
+import static com.google.udmi.util.GeneralUtils.ifNotNullGet;
+import static com.google.udmi.util.GeneralUtils.ifNotTrueGet;
+import static com.google.udmi.util.GeneralUtils.ifTrueGet;
+import static com.google.udmi.util.GeneralUtils.isNotTrue;
+import static com.google.udmi.util.GeneralUtils.joinOrNull;
 import static com.google.udmi.util.JsonUtil.isoConvert;
+import static com.google.udmi.util.JsonUtil.stringifyTerse;
 import static java.lang.String.format;
 import static java.util.Objects.requireNonNull;
+import static java.util.Optional.ofNullable;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 import static udmi.schema.Bucket.DISCOVERY_SCAN;
 import static udmi.schema.Bucket.ENUMERATION;
 import static udmi.schema.Bucket.ENUMERATION_FAMILIES;
 import static udmi.schema.Bucket.ENUMERATION_FEATURES;
 import static udmi.schema.Bucket.ENUMERATION_POINTSET;
+import static udmi.schema.FamilyDiscoveryState.Phase.ACTIVE;
+import static udmi.schema.FamilyDiscoveryState.Phase.DONE;
+import static udmi.schema.FamilyDiscoveryState.Phase.PENDING;
+import static udmi.schema.FamilyDiscoveryState.Phase.STOPPED;
 import static udmi.schema.FeatureDiscovery.FeatureStage.ALPHA;
 import static udmi.schema.FeatureDiscovery.FeatureStage.BETA;
 import static udmi.schema.FeatureDiscovery.FeatureStage.PREVIEW;
@@ -26,26 +40,26 @@ import com.google.daq.mqtt.sequencer.Feature;
 import com.google.daq.mqtt.sequencer.SequenceBase;
 import com.google.daq.mqtt.sequencer.Summary;
 import com.google.daq.mqtt.sequencer.semantic.SemanticDate;
-import com.google.udmi.util.CleanDateFormat;
+import java.time.Duration;
 import java.time.Instant;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import org.junit.Before;
 import org.junit.Test;
 import udmi.schema.Bucket;
+import udmi.schema.Common.ProtocolFamily;
 import udmi.schema.DiscoveryConfig;
 import udmi.schema.DiscoveryEvent;
 import udmi.schema.Enumerate;
 import udmi.schema.FamilyDiscoveryConfig;
 import udmi.schema.FamilyDiscoveryState;
+import udmi.schema.FamilyDiscoveryState.Phase;
 import udmi.schema.FeatureDiscovery;
 
 /**
@@ -53,18 +67,21 @@ import udmi.schema.FeatureDiscovery;
  */
 public class DiscoverySequences extends SequenceBase {
 
-  public static final int SCAN_START_DELAY_SEC = 10;
+  public static final Duration SCAN_START_DELAY = Duration.ofSeconds(10);
+  public static final int SCAN_START_DELAY_SEC = (int) SCAN_START_DELAY.getSeconds();
   private static final int SCAN_ITERATIONS = 2;
-  private HashMap<String, Date> previousGenerations;
-  private Set<String> families;
+  private static final ProtocolFamily scanFamily = ProtocolFamily.VENDOR;
+  private static final Date LONG_TIME_AGO = new Date(12897321);
+  public static boolean checkConfigDiff;
+  private Set<ProtocolFamily> metaFamilies;
+
+  private static boolean isActive(Entry<String, FeatureDiscovery> entry) {
+    return ofNullable(entry.getValue().stage).orElse(STABLE).compareTo(BETA) >= 0;
+  }
 
   @Before
   public void setupExpectedParameters() {
     allowDeviceStateChange("discovery");
-  }
-
-  private static boolean isActive(Entry<String, FeatureDiscovery> entry) {
-    return Optional.ofNullable(entry.getValue().stage).orElse(STABLE).compareTo(BETA) >= 0;
   }
 
   private DiscoveryEvent runEnumeration(Enumerate enumerate) {
@@ -72,7 +89,7 @@ public class DiscoverySequences extends SequenceBase {
     deviceConfig.discovery.enumerate = enumerate;
     untilTrue("enumeration not active", () -> deviceState.discovery.generation == null);
 
-    Date startTime = SemanticDate.describe("generation start time", CleanDateFormat.cleanDate());
+    Date startTime = SemanticDate.describe("generation start time", cleanDate());
     deviceConfig.discovery.generation = startTime;
     info("Starting empty enumeration at " + isoConvert(startTime));
     untilTrue("matching enumeration generation",
@@ -84,7 +101,7 @@ public class DiscoverySequences extends SequenceBase {
     List<DiscoveryEvent> allEvents = popReceivedEvents(DiscoveryEvent.class);
     // Filter for enumeration events, since there will sometimes be lingering scan events.
     List<DiscoveryEvent> enumEvents = allEvents.stream().filter(event -> event.scan_addr == null)
-        .collect(Collectors.toList());
+        .toList();
     assertEquals("a single discovery event received", 1, enumEvents.size());
     DiscoveryEvent event = enumEvents.get(0);
     info("Received discovery generation " + isoConvert(event.generation));
@@ -94,9 +111,10 @@ public class DiscoverySequences extends SequenceBase {
 
   private void checkSelfEnumeration(DiscoveryEvent event, Enumerate enumerate) {
     if (isTrue(enumerate.families)) {
-      Set<String> models = Optional.ofNullable(deviceMetadata.localnet)
+      Set<ProtocolFamily> models = ofNullable(deviceMetadata.localnet)
           .map(localnet -> localnet.families.keySet()).orElse(null);
-      Set<String> events = Optional.ofNullable(event.families).map(Map::keySet).orElse(null);
+      Set<ProtocolFamily> events = ofNullable(event.families).map(Map::keySet)
+          .orElse(null);
       checkThat("family enumeration matches", () -> models.size() == events.size());
     } else {
       checkThat("no family enumeration", () -> event.families == null);
@@ -109,7 +127,7 @@ public class DiscoverySequences extends SequenceBase {
     }
 
     if (isTrue(enumerate.points)) {
-      int expectedSize = Optional.ofNullable(deviceMetadata.pointset.points).map(HashMap::size)
+      int expectedSize = ofNullable(deviceMetadata.pointset.points).map(HashMap::size)
           .orElse(0);
       checkThat("enumerated point count matches", () -> event.points.size() == expectedSize);
     } else {
@@ -136,7 +154,7 @@ public class DiscoverySequences extends SequenceBase {
   }
 
   private boolean isTrue(Boolean condition) {
-    return Optional.ofNullable(condition).orElse(false);
+    return ofNullable(condition).orElse(false);
   }
 
   @Test(timeout = NINETY_SECONDS_MS)
@@ -193,124 +211,174 @@ public class DiscoverySequences extends SequenceBase {
     checkSelfEnumeration(event, enumerate);
   }
 
-  @Test(timeout = TWO_MINUTES_MS)
+  @Test(timeout = ONE_MINUTE_MS)
   @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
-  @Summary("Check results of a single network family scan")
-  public void single_scan() {
+  @Summary("Check that a scan scheduled in the past never starts")
+  public void single_scan_past() {
     initializeDiscovery();
-    Date startTime = CleanDateFormat.cleanDate(
-        Date.from(Instant.now().plusSeconds(SCAN_START_DELAY_SEC)));
-    boolean shouldEnumerate = true;
-    scheduleScan(startTime, null, shouldEnumerate);
-    untilTrue("scheduled scan start",
-        () -> families.stream().anyMatch(familyScanActivated(startTime))
-            || families.stream().anyMatch(this::stateGenerationMismatch)
-            || !deviceState.timestamp.before(startTime));
-    if (deviceState.timestamp.before(startTime)) {
-      warning("scan started before activation: " + deviceState.timestamp + " < " + startTime);
-      assertFalse("premature activation",
-          families.stream().anyMatch(familyScanActivated(startTime)));
-      assertFalse("premature generation",
-          families.stream().anyMatch(this::stateGenerationMismatch));
-      fail("unknown reason");
-    }
-    untilTrue("scan activation", () -> families.stream().allMatch(familyScanActivated(startTime)));
-    untilTrue("scan completed", () -> families.stream().allMatch(familyScanComplete(startTime)));
-    List<DiscoveryEvent> receivedEvents = popReceivedEvents(
-        DiscoveryEvent.class);
+    Date startTime = LONG_TIME_AGO;
+    boolean shouldEnumerate = false;
+    configureScan(startTime, null, shouldEnumerate);
+    waitFor("scan schedule initially complete",
+        () -> ifNotTrueGet(() -> scanComplete(startTime).test(scanFamily),
+            this::describedFamilyState));
+    sleepFor("false start check delay", SCAN_START_DELAY);
+    waitFor("scan schedule still pending",
+        () -> ifNotTrueGet(() -> scanComplete(startTime).test(scanFamily),
+            this::describedFamilyState));
+  }
+
+  @Test(timeout = ONE_MINUTE_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check results of a single scan scheduled soon")
+  public void single_scan_future() {
+    initializeDiscovery();
+    Date startTime = cleanInstantDate(Instant.now().plus(SCAN_START_DELAY));
+    boolean shouldEnumerate = false;
+    configureScan(startTime, null, shouldEnumerate);
+    checkConfigDiff = true;
+    Duration waitingPeriod = SCAN_START_DELAY.plus(SCAN_START_DELAY);
+    waitFor("scheduled scan start", waitingPeriod,
+        () -> ifNotTrueGet(() -> scanActive(startTime).test(scanFamily),
+            this::describedFamilyState));
+    checkThat("scan not started before activation", !deviceState.timestamp.before(startTime),
+        describedFamilyState());
+    waitFor("scheduled scan stop", waitingPeriod,
+        () -> ifTrueGet(scanComplete(startTime).test(scanFamily), this::describedFamilyState));
+    List<DiscoveryEvent> receivedEvents = popReceivedEvents(DiscoveryEvent.class);
+    checkThat("discovery events were received", receivedEvents.isEmpty());
     checkEnumeration(receivedEvents, shouldEnumerate);
-    Set<String> eventFamilies = receivedEvents.stream()
-        .flatMap(event -> event.families.keySet().stream())
-        .collect(Collectors.toSet());
-    assertTrue("all requested families present", eventFamilies.containsAll(families));
+  }
+
+  private String describedFamilyState() {
+    return stringifyTerse(getFamilyDiscoveryState());
+  }
+
+  private FamilyDiscoveryState getFamilyDiscoveryState() {
+    return ifNotNullGet(deviceState.discovery.families, map -> map.get(scanFamily));
   }
 
   private void checkEnumeration(List<DiscoveryEvent> receivedEvents, boolean shouldEnumerate) {
-    Predicate<DiscoveryEvent> hasPoints = event -> event.points != null
-        && !event.points.isEmpty();
+    Predicate<DiscoveryEvent> hasPoints = event -> event.points != null && !event.points.isEmpty();
     if (shouldEnumerate) {
-      assertTrue("with enumeration", receivedEvents.stream().allMatch(hasPoints));
+      checkThat("all events have points", receivedEvents.stream().allMatch(hasPoints));
     } else {
-      assertTrue("sans enumeration", receivedEvents.stream().noneMatch(hasPoints));
+      checkThat("no events have points", receivedEvents.stream().noneMatch(hasPoints));
     }
   }
 
   @Test(timeout = TWO_MINUTES_MS)
   @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
-  @Summary("Check periodic scan of address families")
-  public void periodic_scan() {
+  @Summary("Check periodic scan on a fixed schedule")
+  public void periodic_scan_fixed() {
     initializeDiscovery();
-    Date startTime = CleanDateFormat.cleanDate();
+    Date startTime = cleanDate();
     boolean shouldEnumerate = true;
-    scheduleScan(startTime, SCAN_START_DELAY_SEC, shouldEnumerate);
-    Instant endTime = Instant.now().plusSeconds(SCAN_START_DELAY_SEC * SCAN_ITERATIONS);
+    configureScan(startTime, SCAN_START_DELAY, shouldEnumerate);
+    Instant endTime = Instant.now().plusSeconds(SCAN_START_DELAY.getSeconds() * SCAN_ITERATIONS);
     untilUntrue("scan iterations", () -> Instant.now().isBefore(endTime));
-    String oneFamily = families.iterator().next();
+    ProtocolFamily oneFamily = metaFamilies.iterator().next();
     Date finishTime = deviceState.discovery.families.get(oneFamily).generation;
     assertTrue("premature termination",
-        families.stream().noneMatch(familyScanComplete(finishTime)));
+        metaFamilies.stream().noneMatch(scanComplete(finishTime)));
     List<DiscoveryEvent> receivedEvents = popReceivedEvents(DiscoveryEvent.class);
     checkEnumeration(receivedEvents, shouldEnumerate);
-    Set<String> eventFamilies = receivedEvents.stream()
+    Set<ProtocolFamily> eventFamilies = receivedEvents.stream()
         .flatMap(event -> event.families.keySet().stream())
         .collect(Collectors.toSet());
-    assertTrue("all requested families present", eventFamilies.containsAll(families));
+    assertTrue("all requested families present", eventFamilies.containsAll(metaFamilies));
     Map<String, List<DiscoveryEvent>> receivedEventsGrouped = receivedEvents.stream()
         .collect(Collectors.groupingBy(e -> e.scan_family + "." + e.scan_addr));
     assertTrue("scan iteration",
         receivedEventsGrouped.values().stream().allMatch(list -> list.size() == SCAN_ITERATIONS));
   }
 
+  @Test(timeout = TWO_MINUTES_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check periodic scan on a floating schedule")
+  public void periodic_scan_floating() {
+    ifTrueSkipTest(true, "Not yet implemented");
+  }
+
+  @Test(timeout = ONE_MINUTE_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check results of cancelling a pending scan")
+  public void cancel_before_start() {
+    ifTrueSkipTest(true, "Not yet implemented");
+  }
+
+  @Test(timeout = ONE_MINUTE_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check results of cancelling a periodic scan")
+  public void cancel_periodic() {
+    ifTrueSkipTest(true, "Not yet implemented");
+  }
+
   private void initializeDiscovery() {
-    families = catchToNull(() -> deviceMetadata.discovery.families.keySet());
-    if (families == null || families.isEmpty()) {
+    metaFamilies = catchToNull(() -> deviceMetadata.discovery.families.keySet());
+    if (metaFamilies == null || metaFamilies.isEmpty()) {
       skipTest("No discovery families configured");
     }
     deviceConfig.discovery = new DiscoveryConfig();
     deviceConfig.discovery.families = new HashMap<>();
-    untilTrue("all scans not active", () -> families.stream().noneMatch(familyScanActivated(null)));
-    previousGenerations = new HashMap<>();
-    families.forEach(family -> previousGenerations.put(family, getStateFamilyGeneration(family)));
+    untilTrue("discovery families defined", () -> deviceState.discovery.families != null);
+    HashMap<ProtocolFamily, FamilyDiscoveryConfig> configFamilies = deviceConfig.discovery.families;
+    HashMap<ProtocolFamily, FamilyDiscoveryState> stateFamilies = deviceState.discovery.families;
+    waitFor("discovery family keys match", () -> joinOrNull("mismatch: ",
+        symmetricDifference(configFamilies.keySet(), stateFamilies.keySet())
+    ));
+    untilTrue("no scans active",
+        () -> stateFamilies.keySet().stream().noneMatch(scanActive()));
   }
 
-  private void scheduleScan(Date startTime, Integer scanIntervalSec, boolean enumerate) {
-    info("Scan start scheduled for " + startTime);
-    families.forEach(family -> {
-      getConfigFamily(family).generation = SemanticDate.describe("family generation", startTime);
-      getConfigFamily(family).enumerate = enumerate;
-      getConfigFamily(family).scan_interval_sec = scanIntervalSec;
-    });
-    popReceivedEvents(DiscoveryEvent.class);  // Clear out any previously received events
+  private void configureScan(Date startTime, Duration scanInterval, Boolean enumerate) {
+    Integer intervalSec = ofNullable(scanInterval).map(Duration::getSeconds).map(Long::intValue)
+        .orElse(null);
+    info(format("%s configured for family %s starting at %s evey %ss",
+        isTrue(enumerate) ? "Enumeration" : "Scan", scanFamily, startTime,
+        intervalSec));
+    FamilyDiscoveryConfig configFamily = getConfigFamily(scanFamily);
+    configFamily.generation = SemanticDate.describe("family generation", startTime);
+    configFamily.enumerate = enumerate;
+    configFamily.scan_interval_sec = intervalSec;
+    configFamily.scan_duration_sec = ofNullable(intervalSec).orElse(SCAN_START_DELAY_SEC);
+    popReceivedEvents(DiscoveryEvent.class);
   }
 
-  private FamilyDiscoveryConfig getConfigFamily(String family) {
+  private FamilyDiscoveryConfig getConfigFamily(ProtocolFamily family) {
     return deviceConfig.discovery.families.computeIfAbsent(family,
         adding -> new FamilyDiscoveryConfig());
   }
 
-  private Date getStateFamilyGeneration(String family) {
+  private Date getStateFamilyGeneration(ProtocolFamily family) {
     return catchToNull(() -> getStateFamily(family).generation);
   }
 
-  private boolean stateGenerationMismatch(String family) {
-    return !Objects.equals(previousGenerations.get(family), getStateFamilyGeneration(family));
-  }
-
-  private FamilyDiscoveryState getStateFamily(String family) {
+  private FamilyDiscoveryState getStateFamily(ProtocolFamily family) {
     return deviceState.discovery.families.get(family);
   }
 
-  private Predicate<String> familyScanActive(Date startTime) {
-    return family -> catchToFalse(() -> getStateFamily(family).active
-        && CleanDateFormat.dateEquals(getStateFamily(family).generation, startTime));
+  private Predicate<ProtocolFamily> scanPending(Date startTime) {
+    return family -> dateEquals(getStateFamily(family).generation, startTime)
+        && getStateFamily(family).phase == PENDING
+        && deviceState.timestamp.before(startTime);
   }
 
-  private Predicate<String> familyScanActivated(Date startTime) {
-    return family -> catchToFalse(() -> getStateFamily(family).active
-        || CleanDateFormat.dateEquals(getStateFamily(family).generation, startTime));
+  private Predicate<ProtocolFamily> scanActive() {
+    return family -> getStateFamily(family).phase == ACTIVE;
   }
 
-  private Predicate<? super String> familyScanComplete(Date startTime) {
-    return familyScanActivated(startTime).and(familyScanActive(startTime).negate());
+  private Predicate<ProtocolFamily> scanActive(Date startTime) {
+    return family -> dateEquals(getStateFamily(family).generation, startTime)
+        && getStateFamily(family).phase == ACTIVE;
+  }
+
+  private Predicate<ProtocolFamily> scanComplete(Date startTime) {
+    return family -> {
+      FamilyDiscoveryState stateFamily = getStateFamily(family);
+      return dateEquals(stateFamily.generation, startTime)
+          && (stateFamily.phase == DONE || stateFamily.phase == STOPPED)
+          && deviceState.timestamp.after(startTime);
+    };
   }
 }
